--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-03-25 Sat 21:01 -->
+<!-- 2017-03-25 Sat 21:05 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>eliza-cl.org Eliza Tests</title>
@@ -233,13 +233,375 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1da79eb">Introduction</a></li>
+<li><a href="#org1bd38bb">Preface</a></li>
+<li><a href="#orgf107859">Introduction</a></li>
+<li><a href="#org9db3b46">System</a>
+<ul>
+<li><a href="#org6302f71">:eliza package</a></li>
+</ul>
+</li>
+<li><a href="#org60f73b7">Pattern Matching</a>
+<ul>
+<li><a href="#orgf4528e3">simple-equal</a></li>
+<li><a href="#orgc8ac0a8">variable-p</a></li>
+<li><a href="#org497f481">pat-match</a>
+<ul>
+<li><a href="#orgaac6f6f">A naive version</a></li>
+<li><a href="#orgfdb27f1">A second buggy version</a></li>
+<li><a href="#org5b140b8">pattern matching constants</a></li>
+<li><a href="#org8fddbd8">abstractions over assoc</a></li>
+<li><a href="#org84ca930">A third version</a></li>
+<li><a href="#orgabb45a1">Segment Pattern Matching</a></li>
+<li><a href="#org63f54cb">Final</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#org9e621b7">Tests (experimental)</a>
+<ul>
+<li><a href="#org1e35aa8">Introduction</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1da79eb" class="outline-2">
-<h2 id="org1da79eb">Introduction</h2>
-<div class="outline-text-2" id="text-org1da79eb">
+<div id="outline-container-org1bd38bb" class="outline-2">
+<h2 id="org1bd38bb">Preface</h2>
+<div class="outline-text-2" id="text-org1bd38bb">
+<p>
+<b><b>The computer code here is not original to me.</b></b> and this document reflects several of my ongoing projects:
+</p>
+<ol class="org-ol">
+<li>Learning 'classic' AI by working through Peter Norvig's <a href="http://norvig.com/paip.html"><b>Paradigms of Artificial Intelligence: Case Studies in Common Lisp</b></a>.   Norvig's book is the source for the Lisp code in this project.</li>
+<li>Learning more Emacs in general and org-mode in particular.</li>
+<li>Developing a work process around Literate Programming.</li>
+</ol>
+</div>
+</div>
+<div id="outline-container-orgf107859" class="outline-2">
+<h2 id="orgf107859">Introduction</h2>
+</div>
+<div id="outline-container-org9db3b46" class="outline-2">
+<h2 id="org9db3b46">System</h2>
+<div class="outline-text-2" id="text-org9db3b46">
+<p>
+This is my first attempt at using ASDF to build a system. The system uses utility files available <a href="https://github.com/brudgers/norvig-utils">here</a>.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">;;; To build the system
+;;; (asdf:operate 'asdf:load-op :eliza)
+;;; then run
+;;; (in-package :eliza)
+
+(load "../utils/norvig-utils")
+(load "../utils/norvig-debugger")
+
+(defpackage #:eliza
+  (:use :common-lisp
+        :asdf
+        :norvig-utils
+        :norvig-debugger
+        :kludgecode))
+
+(in-package :eliza)
+
+(defsystem eliza
+    :serial t
+    :components ((:file "eliza")))
+</pre>
+</div>
+</div>
+<div id="outline-container-org6302f71" class="outline-3">
+<h3 id="org6302f71">:eliza package</h3>
+<div class="outline-text-3" id="text-org6302f71">
+<p>
+As is the case with ASDF, this is also my first time developing using Common Lisp's package system.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org79e33a0">(in-package :eliza)
+</pre>
+</div>
+</div>
+</div>
+</div>
+<div id="outline-container-org60f73b7" class="outline-2">
+<h2 id="org60f73b7">Pattern Matching</h2>
+<div class="outline-text-2" id="text-org60f73b7">
+</div><div id="outline-container-orgf4528e3" class="outline-3">
+<h3 id="orgf4528e3">simple-equal</h3>
+<div class="outline-text-3" id="text-orgf4528e3">
+<div class="org-src-container">
+<pre class="src src-lisp">(defun simple-equal (x y)
+  "Are x and y equal. Does not check inside strings."
+  (if (or (atom x) (atom y))
+      (eql x y)
+      (and (simple-equal (first x) (first y))
+           (simple-equal (rest x) (rest y)))))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-orgc8ac0a8" class="outline-3">
+<h3 id="orgc8ac0a8">variable-p</h3>
+<div class="outline-text-3" id="text-orgc8ac0a8">
+<p>
+This function brings up two interesting aspects of Common Lisp. The first is that <code>atom</code>'s are not truely atomic. The second is that predicate syntax in Common Lisp suffers from the same big-language inconsistencies as might be found in PHP.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="orgdf8f439">(defun variable-p (x)
+  "Is x a variable where a variable is a symbol beginning with '?'"
+  (and (symbolp x)
+       (equal (char (symbol-name x) 0)
+              #\?)))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org497f481" class="outline-3">
+<h3 id="org497f481">pat-match</h3>
+<div class="outline-text-3" id="text-org497f481">
+<p>
+The naive version is so straight forward it could be template code for recursing on a list (or two lists). There is a certain concision to the first part which avoids enumerating all the cases of atoms and lists. Though it arises more from the template style than anything else. 
+</p>
+</div>
+<div id="outline-container-orgaac6f6f" class="outline-4">
+<h4 id="orgaac6f6f">A naive version</h4>
+<div class="outline-text-4" id="text-orgaac6f6f">
+<div class="org-src-container">
+<pre class="src src-lisp">(defun pat-match (input pattern)
+  "Does pattern match input? Any variable can match anything."
+  (if (variable-p pattern)
+      t
+      (if (or (atom pattern) (atom input))
+          (eql pattern input)
+          (and (pat-match (first input) (first pattern))
+               (pat-match (rest input) (rest pattern))))))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-orgfdb27f1" class="outline-4">
+<h4 id="orgfdb27f1">A second buggy version</h4>
+<div class="outline-text-4" id="text-orgfdb27f1">
+<p>
+One problem is that <code>(eql pattern input)</code> may return <code>t</code>. While <code>nil</code> is not a problem for <code>append</code>, <code>t</code> is&#x2026;since <code>t</code> is not a list. Booleans are actually tough if they're overloaded as they are many languages.
+</p>
+
+<p>
+The second problem is semi-boolean contexts: those in which <code>nil</code> may be returned from a successful match versus where <code>nil</code> is returned because a predicate turned out to be false. Did I say booleans are tough?
+</p>
+
+<p>
+The final problem is that we want the same variable (e.g. <code>?X</code>) to consistently be bound to the same expression when it appears multiple times in an input.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(defun pat-match (pattern input)
+  "BUGGY Second version."
+  (if (variable-p pattern)
+      (list (cons pattern input))
+      (if (or (atom pattern) (atom input))
+          (eql pattern input)
+          (append (pat-match (first pattern) (first input))
+                  (pat-match (rest pattern) (rest input))))))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org5b140b8" class="outline-4">
+<h4 id="org5b140b8">pattern matching constants</h4>
+<div class="outline-text-4" id="text-org5b140b8">
+<p>
+The first step in the third version is to turn <code>pat-match</code> into a true predicate that only returns <code>nil</code> for failure. It's worth noting that only having a single value that indicates <code>false</code> is helpful here.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="orgb5bff59">(defconstant fail nil "indicates pat-match failure.")
+
+(defconstant no-bindings '((t . t))
+  "Indicates a pattern match success, with no variables.")
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org8fddbd8" class="outline-4">
+<h4 id="org8fddbd8">abstractions over assoc</h4>
+<div class="outline-text-4" id="text-org8fddbd8">
+<p>
+<b>Note:</b> The ASDF build system loads these from my <a href="https://github.com/brudgers/norvig-utils">norvig-utils repository</a>. They are shown here to maintain consistency with the text.
+</p>
+
+<p>
+Building abstractions over <code>assoc</code> enables using the language of variables and bindings rather than low level lisp.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org2e225af">(defun get-bindings (var bindings)
+  "Find a (variable . value) pair in a binding list."
+  (assoc var bindings))
+
+(defun binding-val (binding)
+  "Get the value part of a single binding."
+  (cdr binding))
+
+(defun lookup (var bindings)
+  "Get the value part (for var) from a binding list."
+  (binding-val (get-bindings var bindings)))
+
+(defun extend-bindings (var val bindings)
+  "Add a (var . value) pair to a binding list."
+  (cons (cons var val) bindings))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org84ca930" class="outline-4">
+<h4 id="org84ca930">A third version</h4>
+<div class="outline-text-4" id="text-org84ca930">
+<p>
+There are five cases for <code>pat-match</code>:
+</p>
+<ol class="org-ol">
+<li>Bindings list is <code>fail</code> and the match fails.</li>
+<li>Pattern is a single variable.</li>
+<li>Pattern and input are <code>eql</code>.</li>
+<li>Pattern and input are both lists.</li>
+<li>None of these holds and the match fails.</li>
+</ol>
+<div class="org-src-container">
+<pre class="src src-lisp">(defun pat-match (pattern input &amp;optional (bindings non-bindings))
+  "Match pattern against input in the context of bindings."
+  (cond ((eq bindings fail) fail)
+        ((variable-p pattern)
+         (match-variable pattern input bindings))
+        ((eql pattern input) bindings)
+        ((and (consp pattern)
+              (consp input))
+         (pat-match (rest pattern)
+                    (rest input)
+                    (pat-match (first pattern)
+                               (first input)
+                               bindings)))
+        (t fail)))
+</pre>
+</div>
+<div class="org-src-container">
+<pre class="src src-lisp" id="orgfd4f41d">(defun match-variable (var input bindings)
+  "Does var match input. Uses bindings. Returns bindings with or without an update depending on match."
+  (let ((binding (get-bindings var bindings)))
+    (cond ((not binding) (extend-bindings var input bindings))
+          ((equal input (binding-val binding)) bindings)
+          (t fail))))
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-orgabb45a1" class="outline-4">
+<h4 id="orgabb45a1">Segment Pattern Matching</h4>
+<div class="outline-text-4" id="text-orgabb45a1">
+<p>
+It is useful to have two types of variables, those that match individual input elements and others that behave like Lisp's <code>&amp;rest</code> parameter. The latter can be thought of as matching segments. This would allow a syntax such as <code>(?P need . ?X)</code>.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">;;; Example
+(pat-match '((?* ?p) need (?* ?x))
+           '(Mr Hulot and I need a vaction))
+((?P MR HULOT AND I) (?X A VACTION))
+</pre>
+</div>
+<p>
+Updating <code>pat-match</code> for the new behavior:
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="orgd1ac763">(defun pat-match (pattern input &amp;optional (bindings no-bindings))
+  "Match pattern against input in context of the bindings."
+  (cond ((eq bindings fail) fail)
+        ((variable-p pattern)
+         (match-variable pattern input bindings))
+        ((eql pattern input) bindings)
+        ((segment-pattern-p pattern)
+         (segment-match pattern input bindings))
+        ((and (consp pattern) (consp input))
+         (pat-match (rest pattern)
+                    (rest input)
+                    (pat-match (first pattern)
+                               (first input)
+                               bindings)))
+        (t fail)))
+</pre>
+</div>
+<p>
+Adding the new predicate highlights Common Lisp's flexibility in regards to naming symbols by allowing a notation evocative of the kleene star.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org6395cb3">(defun segment-pattern-p (pattern)
+  "Is this a segment matching pattern: ((?* var) . pat)"
+  (and (consp pattern)
+       (starts-with (first pattern) '?*)))
+</pre>
+</div>
+<p>
+The first pass at <code>segment-match</code> address the problems that arise when the next element of the pattern is contained in the input but there are intervening elements between what has been matched already and the match for the next element of the pattern. It allows looking further ahead in the input at the expense of requiring a segment-variable to be the last variable in a pattern.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp" id="org8539520">(defun segment-match (pattern input bindings &amp;optional (start 0))
+  "Match the segment patter ((?* var) . pat) against input."
+  (let ((var (second (first pattern)))
+        (pat (rest pattern)))
+    (if (null pat)
+        (match-variable var input bindings)
+        ;; We assume pat starts with a constant
+        ;; In other words, a pattern can't have 2 consectutive vars
+        (let ((pos (position (first pat)
+                             input
+                             :start start
+                             :test #'equal)))
+          (if (null pos)
+              fail
+              (let ((b2 (pat-match pat
+                                   (subseq input pos)
+                                   bindings)))
+                ;; If this match failed try another longer one
+                ;; If it worked, check that the variables match
+                (if (eq b2 fail)
+                    (segment-match pattern input bindings (+ 1 pos))
+                    (match-variable var
+                                    (subseq input 0 pos)
+                                    b2))))))))
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org63f54cb" class="outline-4">
+<h4 id="org63f54cb">Final</h4>
+<div class="outline-text-4" id="text-org63f54cb">
+<div class="org-src-container">
+<pre class="src src-lisp" id="orgc44eea3">&lt;&lt;eliza-package&gt;&gt;
+
+&lt;&lt;pat-match-constants&gt;&gt;
+
+&lt;&lt;binding-utilities&gt;&gt;
+
+&lt;&lt;variable-p&gt;&gt;
+
+&lt;&lt;match-variable&gt;&gt;
+
+&lt;&lt;pat-match&gt;&gt;
+
+&lt;&lt;segment-match&gt;&gt;
+
+&lt;&lt;segment-pattern-p&gt;&gt;
+</pre>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="outline-container-org9e621b7" class="outline-2">
+<h2 id="org9e621b7">Tests (experimental)</h2>
+<div class="outline-text-2" id="text-org9e621b7">
+</div>
+<div id="outline-container-org1e35aa8" class="outline-3">
+<h3 id="org1e35aa8">Introduction</h3>
+<div class="outline-text-3" id="text-org1e35aa8">
 <p>
 This is mostly an experiment:
 </p>
@@ -256,9 +618,10 @@ This is mostly an experiment:
 </div>
 </div>
 </div>
+</div>
 <div id="postamble" class="status">
 <p class="author">Author: benrudgers</p>
-<p class="date">Created: 2017-03-25 Sat 21:01</p>
+<p class="date">Created: 2017-03-25 Sat 21:05</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
