--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-03-25 Sat 21:05 -->
+<!-- 2017-03-25 Sat 22:07 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>eliza-cl.org Eliza Tests</title>
@@ -233,41 +233,44 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1bd38bb">Preface</a></li>
-<li><a href="#orgf107859">Introduction</a></li>
-<li><a href="#org9db3b46">System</a>
+<li><a href="#org851dc64">Preface</a></li>
+<li><a href="#org886b25b">Introduction</a></li>
+<li><a href="#org53b1236">System</a>
 <ul>
-<li><a href="#org6302f71">:eliza package</a></li>
+<li><a href="#orgd98376b">:eliza package</a></li>
 </ul>
 </li>
-<li><a href="#org60f73b7">Pattern Matching</a>
+<li><a href="#orgd54c675">Pattern Matching</a>
 <ul>
-<li><a href="#orgf4528e3">simple-equal</a></li>
-<li><a href="#orgc8ac0a8">variable-p</a></li>
-<li><a href="#org497f481">pat-match</a>
+<li><a href="#org7101e26">simple-equal</a></li>
+<li><a href="#org3f49ea2">variable-p</a></li>
+<li><a href="#org3802df2">pat-match</a>
 <ul>
-<li><a href="#orgaac6f6f">A naive version</a></li>
-<li><a href="#orgfdb27f1">A second buggy version</a></li>
-<li><a href="#org5b140b8">pattern matching constants</a></li>
-<li><a href="#org8fddbd8">abstractions over assoc</a></li>
-<li><a href="#org84ca930">A third version</a></li>
-<li><a href="#orgabb45a1">Segment Pattern Matching</a></li>
-<li><a href="#org63f54cb">Final</a></li>
+<li><a href="#org66677a4">A naive version</a></li>
+<li><a href="#orgdae65ba">A second buggy version</a></li>
+<li><a href="#org66ce2a8">pattern matching constants</a></li>
+<li><a href="#org057fa02">abstractions over assoc</a></li>
+<li><a href="#orgb0de9aa">A third version</a></li>
+<li><a href="#org6065431">Segment Pattern Matching</a></li>
+<li><a href="#orgb49a2af">Final</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org9e621b7">Tests (experimental)</a>
+<li><a href="#org3bcc063">Tests (experimental)</a>
 <ul>
-<li><a href="#org1e35aa8">Introduction</a></li>
+<li><a href="#orgc6cb0c5">Introduction</a></li>
+<li><a href="#org83a60c1">Base File</a></li>
+<li><a href="#org2a5b5e7">Installing lisp-unit</a></li>
+<li><a href="#org109b299">Test One</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1bd38bb" class="outline-2">
-<h2 id="org1bd38bb">Preface</h2>
-<div class="outline-text-2" id="text-org1bd38bb">
+<div id="outline-container-org851dc64" class="outline-2">
+<h2 id="org851dc64">Preface</h2>
+<div class="outline-text-2" id="text-org851dc64">
 <p>
 <b><b>The computer code here is not original to me.</b></b> and this document reflects several of my ongoing projects:
 </p>
@@ -278,12 +281,12 @@ for the JavaScript code in this tag.
 </ol>
 </div>
 </div>
-<div id="outline-container-orgf107859" class="outline-2">
-<h2 id="orgf107859">Introduction</h2>
+<div id="outline-container-org886b25b" class="outline-2">
+<h2 id="org886b25b">Introduction</h2>
 </div>
-<div id="outline-container-org9db3b46" class="outline-2">
-<h2 id="org9db3b46">System</h2>
-<div class="outline-text-2" id="text-org9db3b46">
+<div id="outline-container-org53b1236" class="outline-2">
+<h2 id="org53b1236">System</h2>
+<div class="outline-text-2" id="text-org53b1236">
 <p>
 This is my first attempt at using ASDF to build a system. The system uses utility files available <a href="https://github.com/brudgers/norvig-utils">here</a>.
 </p>
@@ -311,25 +314,25 @@ This is my first attempt at using ASDF to build a system. The system uses utilit
 </pre>
 </div>
 </div>
-<div id="outline-container-org6302f71" class="outline-3">
-<h3 id="org6302f71">:eliza package</h3>
-<div class="outline-text-3" id="text-org6302f71">
+<div id="outline-container-orgd98376b" class="outline-3">
+<h3 id="orgd98376b">:eliza package</h3>
+<div class="outline-text-3" id="text-orgd98376b">
 <p>
 As is the case with ASDF, this is also my first time developing using Common Lisp's package system.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="org79e33a0">(in-package :eliza)
+<pre class="src src-lisp" id="org3424bf9">(in-package :eliza)
 </pre>
 </div>
 </div>
 </div>
 </div>
-<div id="outline-container-org60f73b7" class="outline-2">
-<h2 id="org60f73b7">Pattern Matching</h2>
-<div class="outline-text-2" id="text-org60f73b7">
-</div><div id="outline-container-orgf4528e3" class="outline-3">
-<h3 id="orgf4528e3">simple-equal</h3>
-<div class="outline-text-3" id="text-orgf4528e3">
+<div id="outline-container-orgd54c675" class="outline-2">
+<h2 id="orgd54c675">Pattern Matching</h2>
+<div class="outline-text-2" id="text-orgd54c675">
+</div><div id="outline-container-org7101e26" class="outline-3">
+<h3 id="org7101e26">simple-equal</h3>
+<div class="outline-text-3" id="text-org7101e26">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun simple-equal (x y)
   "Are x and y equal. Does not check inside strings."
@@ -341,14 +344,14 @@ As is the case with ASDF, this is also my first time developing using Common Lis
 </div>
 </div>
 </div>
-<div id="outline-container-orgc8ac0a8" class="outline-3">
-<h3 id="orgc8ac0a8">variable-p</h3>
-<div class="outline-text-3" id="text-orgc8ac0a8">
+<div id="outline-container-org3f49ea2" class="outline-3">
+<h3 id="org3f49ea2">variable-p</h3>
+<div class="outline-text-3" id="text-org3f49ea2">
 <p>
 This function brings up two interesting aspects of Common Lisp. The first is that <code>atom</code>'s are not truely atomic. The second is that predicate syntax in Common Lisp suffers from the same big-language inconsistencies as might be found in PHP.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="orgdf8f439">(defun variable-p (x)
+<pre class="src src-lisp" id="orgeffa690">(defun variable-p (x)
   "Is x a variable where a variable is a symbol beginning with '?'"
   (and (symbolp x)
        (equal (char (symbol-name x) 0)
@@ -357,16 +360,16 @@ This function brings up two interesting aspects of Common Lisp. The first is tha
 </div>
 </div>
 </div>
-<div id="outline-container-org497f481" class="outline-3">
-<h3 id="org497f481">pat-match</h3>
-<div class="outline-text-3" id="text-org497f481">
+<div id="outline-container-org3802df2" class="outline-3">
+<h3 id="org3802df2">pat-match</h3>
+<div class="outline-text-3" id="text-org3802df2">
 <p>
 The naive version is so straight forward it could be template code for recursing on a list (or two lists). There is a certain concision to the first part which avoids enumerating all the cases of atoms and lists. Though it arises more from the template style than anything else. 
 </p>
 </div>
-<div id="outline-container-orgaac6f6f" class="outline-4">
-<h4 id="orgaac6f6f">A naive version</h4>
-<div class="outline-text-4" id="text-orgaac6f6f">
+<div id="outline-container-org66677a4" class="outline-4">
+<h4 id="org66677a4">A naive version</h4>
+<div class="outline-text-4" id="text-org66677a4">
 <div class="org-src-container">
 <pre class="src src-lisp">(defun pat-match (input pattern)
   "Does pattern match input? Any variable can match anything."
@@ -380,9 +383,9 @@ The naive version is so straight forward it could be template code for recursing
 </div>
 </div>
 </div>
-<div id="outline-container-orgfdb27f1" class="outline-4">
-<h4 id="orgfdb27f1">A second buggy version</h4>
-<div class="outline-text-4" id="text-orgfdb27f1">
+<div id="outline-container-orgdae65ba" class="outline-4">
+<h4 id="orgdae65ba">A second buggy version</h4>
+<div class="outline-text-4" id="text-orgdae65ba">
 <p>
 One problem is that <code>(eql pattern input)</code> may return <code>t</code>. While <code>nil</code> is not a problem for <code>append</code>, <code>t</code> is&#x2026;since <code>t</code> is not a list. Booleans are actually tough if they're overloaded as they are many languages.
 </p>
@@ -407,14 +410,14 @@ The final problem is that we want the same variable (e.g. <code>?X</code>) to co
 </div>
 </div>
 </div>
-<div id="outline-container-org5b140b8" class="outline-4">
-<h4 id="org5b140b8">pattern matching constants</h4>
-<div class="outline-text-4" id="text-org5b140b8">
+<div id="outline-container-org66ce2a8" class="outline-4">
+<h4 id="org66ce2a8">pattern matching constants</h4>
+<div class="outline-text-4" id="text-org66ce2a8">
 <p>
 The first step in the third version is to turn <code>pat-match</code> into a true predicate that only returns <code>nil</code> for failure. It's worth noting that only having a single value that indicates <code>false</code> is helpful here.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="orgb5bff59">(defconstant fail nil "indicates pat-match failure.")
+<pre class="src src-lisp" id="org9641fe4">(defconstant fail nil "indicates pat-match failure.")
 
 (defconstant no-bindings '((t . t))
   "Indicates a pattern match success, with no variables.")
@@ -422,9 +425,9 @@ The first step in the third version is to turn <code>pat-match</code> into a tru
 </div>
 </div>
 </div>
-<div id="outline-container-org8fddbd8" class="outline-4">
-<h4 id="org8fddbd8">abstractions over assoc</h4>
-<div class="outline-text-4" id="text-org8fddbd8">
+<div id="outline-container-org057fa02" class="outline-4">
+<h4 id="org057fa02">abstractions over assoc</h4>
+<div class="outline-text-4" id="text-org057fa02">
 <p>
 <b>Note:</b> The ASDF build system loads these from my <a href="https://github.com/brudgers/norvig-utils">norvig-utils repository</a>. They are shown here to maintain consistency with the text.
 </p>
@@ -433,7 +436,7 @@ The first step in the third version is to turn <code>pat-match</code> into a tru
 Building abstractions over <code>assoc</code> enables using the language of variables and bindings rather than low level lisp.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="org2e225af">(defun get-bindings (var bindings)
+<pre class="src src-lisp" id="org6fb72e6">(defun get-bindings (var bindings)
   "Find a (variable . value) pair in a binding list."
   (assoc var bindings))
 
@@ -452,9 +455,9 @@ Building abstractions over <code>assoc</code> enables using the language of vari
 </div>
 </div>
 </div>
-<div id="outline-container-org84ca930" class="outline-4">
-<h4 id="org84ca930">A third version</h4>
-<div class="outline-text-4" id="text-org84ca930">
+<div id="outline-container-orgb0de9aa" class="outline-4">
+<h4 id="orgb0de9aa">A third version</h4>
+<div class="outline-text-4" id="text-orgb0de9aa">
 <p>
 There are five cases for <code>pat-match</code>:
 </p>
@@ -483,7 +486,7 @@ There are five cases for <code>pat-match</code>:
 </pre>
 </div>
 <div class="org-src-container">
-<pre class="src src-lisp" id="orgfd4f41d">(defun match-variable (var input bindings)
+<pre class="src src-lisp" id="org63ba8fc">(defun match-variable (var input bindings)
   "Does var match input. Uses bindings. Returns bindings with or without an update depending on match."
   (let ((binding (get-bindings var bindings)))
     (cond ((not binding) (extend-bindings var input bindings))
@@ -493,9 +496,9 @@ There are five cases for <code>pat-match</code>:
 </div>
 </div>
 </div>
-<div id="outline-container-orgabb45a1" class="outline-4">
-<h4 id="orgabb45a1">Segment Pattern Matching</h4>
-<div class="outline-text-4" id="text-orgabb45a1">
+<div id="outline-container-org6065431" class="outline-4">
+<h4 id="org6065431">Segment Pattern Matching</h4>
+<div class="outline-text-4" id="text-org6065431">
 <p>
 It is useful to have two types of variables, those that match individual input elements and others that behave like Lisp's <code>&amp;rest</code> parameter. The latter can be thought of as matching segments. This would allow a syntax such as <code>(?P need . ?X)</code>.
 </p>
@@ -510,7 +513,7 @@ It is useful to have two types of variables, those that match individual input e
 Updating <code>pat-match</code> for the new behavior:
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="orgd1ac763">(defun pat-match (pattern input &amp;optional (bindings no-bindings))
+<pre class="src src-lisp" id="org89656e3">(defun pat-match (pattern input &amp;optional (bindings no-bindings))
   "Match pattern against input in context of the bindings."
   (cond ((eq bindings fail) fail)
         ((variable-p pattern)
@@ -531,7 +534,7 @@ Updating <code>pat-match</code> for the new behavior:
 Adding the new predicate highlights Common Lisp's flexibility in regards to naming symbols by allowing a notation evocative of the kleene star.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="org6395cb3">(defun segment-pattern-p (pattern)
+<pre class="src src-lisp" id="org3148083">(defun segment-pattern-p (pattern)
   "Is this a segment matching pattern: ((?* var) . pat)"
   (and (consp pattern)
        (starts-with (first pattern) '?*)))
@@ -541,7 +544,7 @@ Adding the new predicate highlights Common Lisp's flexibility in regards to nami
 The first pass at <code>segment-match</code> address the problems that arise when the next element of the pattern is contained in the input but there are intervening elements between what has been matched already and the match for the next element of the pattern. It allows looking further ahead in the input at the expense of requiring a segment-variable to be the last variable in a pattern.
 </p>
 <div class="org-src-container">
-<pre class="src src-lisp" id="org8539520">(defun segment-match (pattern input bindings &amp;optional (start 0))
+<pre class="src src-lisp" id="orge80d568">(defun segment-match (pattern input bindings &amp;optional (start 0))
   "Match the segment patter ((?* var) . pat) against input."
   (let ((var (second (first pattern)))
         (pat (rest pattern)))
@@ -570,11 +573,11 @@ The first pass at <code>segment-match</code> address the problems that arise whe
 </div>
 </div>
 
-<div id="outline-container-org63f54cb" class="outline-4">
-<h4 id="org63f54cb">Final</h4>
-<div class="outline-text-4" id="text-org63f54cb">
+<div id="outline-container-orgb49a2af" class="outline-4">
+<h4 id="orgb49a2af">Final</h4>
+<div class="outline-text-4" id="text-orgb49a2af">
 <div class="org-src-container">
-<pre class="src src-lisp" id="orgc44eea3">&lt;&lt;eliza-package&gt;&gt;
+<pre class="src src-lisp" id="org0289e77">&lt;&lt;eliza-package&gt;&gt;
 
 &lt;&lt;pat-match-constants&gt;&gt;
 
@@ -595,13 +598,13 @@ The first pass at <code>segment-match</code> address the problems that arise whe
 </div>
 </div>
 </div>
-<div id="outline-container-org9e621b7" class="outline-2">
-<h2 id="org9e621b7">Tests (experimental)</h2>
-<div class="outline-text-2" id="text-org9e621b7">
+<div id="outline-container-org3bcc063" class="outline-2">
+<h2 id="org3bcc063">Tests (experimental)</h2>
+<div class="outline-text-2" id="text-org3bcc063">
 </div>
-<div id="outline-container-org1e35aa8" class="outline-3">
-<h3 id="org1e35aa8">Introduction</h3>
-<div class="outline-text-3" id="text-org1e35aa8">
+<div id="outline-container-orgc6cb0c5" class="outline-3">
+<h3 id="orgc6cb0c5">Introduction</h3>
+<div class="outline-text-3" id="text-orgc6cb0c5">
 <p>
 This is mostly an experiment:
 </p>
@@ -617,11 +620,43 @@ This is mostly an experiment:
 </ol>
 </div>
 </div>
+
+<div id="outline-container-org83a60c1" class="outline-3">
+<h3 id="org83a60c1">Base File</h3>
+<div class="outline-text-3" id="text-org83a60c1">
+<div class="org-src-container">
+<pre class="src src-lisp">&lt;&lt;lu-install&gt;&gt;
+
+&lt;&lt;lu-test-one&gt;&gt;
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org2a5b5e7" class="outline-3">
+<h3 id="org2a5b5e7">Installing lisp-unit</h3>
+<div class="outline-text-3" id="text-org2a5b5e7">
+<div class="org-src-container">
+<pre class="src src-lisp" id="org2300417">(ql:quickload :lisp-unit)
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org109b299" class="outline-3">
+<h3 id="org109b299">Test One</h3>
+<div class="outline-text-3" id="text-org109b299">
+<div class="org-src-container">
+<pre class="src src-lisp" id="orgd557f07">(in-package :eliza)
+(define-test test-one
+    (assert-equal 5 5))
+</pre>
+</div>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: benrudgers</p>
-<p class="date">Created: 2017-03-25 Sat 21:05</p>
+<p class="date">Created: 2017-03-25 Sat 22:07</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
